# OmniPull

./: .gitignore  README.md  flow.txt  main.py  main2.py  native_bridge.py  requirements.txt  ui_main_with_tabs.py
Linux/: .gitignore  ChangeLog.txt  README.linux.md  all_package.sh  build.sh  flow.txt  main.py  omnipull-watcher.py  omnipull.desktop  package.sh  pyproject.toml  resources.qrc  setup.json  translation.sh
Linux/extension/: background.js  content.js
Linux/icons/: add_download.py  youtube_thread.py
Linux/modules/: Os.py  aria2c_manager.py  brain.py  config.py  downloaditem.py  helper.py  log.txt  postprocessing.py  queues.cfg  setting.cfg  setting.py  settings_manager.py  startup.py  threadpool.py  update.py  update_1.py  utils.py  version.py  video.py  worker.py
Linux/safes/: main.py.py  main_4.py
Linux/ui/: about_dialog.py  add_download.py  changelog_diaglog.py  download_window.py  download_worker.py  populate_worker.py  queue_dialog.py  queue_dialog_2.py  schedule_dialog.py  setting_dialog.py  tray_icon.py  tutorial_window.py  ui_main.py  user_guide_dialog.py  youtube_thread.py
Windows/: .gitignore  ChangeLog.txt  License.rtf  PyIconic.aip  README.md  build.sh  cleanup.bat  flow.txt  language.yaml  linkss.txt  main.py  omnipull-watcher.json  omnipull-watcher.py  package-extension.py  proxies_list.txt  proxy_server.py  pyproject.toml  requirements.txt  resources.qrc  setup.json  t.py  translation.bat  update.bat  update_and_cleanup.bat
Windows/extension/: manifest.json
Windows/modules/: Os.py  aria2c_manager.py  brain copy.py  brain.py  log.txt  (+14 more)
(+150 files in other folders)
