[project]
name = "OmniPull"
version = "1.2.24"
description = "Default template for PDM package"
authors = [
    {name = "Annor-Gyimah", email = "eannor707@gmail.com"},
]
dependencies = ["requests>=2.32.3", "auto-py-to-exe>=2.46.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
