[project]
name = "OmniPull"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Annor-Gyimah", email = "eannor707@gmail.com"},
]
dependencies = ["PySide6>=6.9.0", "plyer>=2.1.0", "getmac>=0.9.5", "pyperclip>=1.9.0", "psutil>=7.0.0", "pillow>=11.2.1", "yt-dlp>=2025.3.31"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
