[project]
name = "OmniPull"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Annor-Gyimah", email = "eannor707@gmail.com"},
]
dependencies = ["yt-dlp==2024.10.20.232914.dev0", "aria2p>=0.12.1", "notify-py>=0.3.43", "beautifulsoup>=3.2.2", "mypy>=1.16.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
